# mildoc-lint

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  AGENTS.md  AGENTS.md.proposal.accepted.2026-05-11T03-01-41Z  CLAUDE.md  CLAUDE.md.proposal.accepted.2026-05-11T03-01-41Z  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  INTENT.md  LICENSE  MANIFEST.in  Makefile  README.md  ROADMAP.md  SECURITY.md  THREAT_MODEL.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  rule_request.yml
.github/workflows/: build-artifacts.yml  ci.yml
constraints/: release.txt
demo/: README.md  expected_output.txt  run_demo.sh  sample_draft_opord.md  show_citations.py
docs/: Archivist-Receipts.md  CLAIMS_MAP.md  CUI-Compliance-Guide.md  EVALUATION.md  INSTALL.md  INTEGRATIONS.md  NAMP-CSEC-Notes.md  OPEN_CORE.md  OSMEAC-Compliance-Guide.md  PACKAGING.md  PUBLIC_BOUNDARY.md  QUICKSTART.md  RELEASE_ARTIFACTS.md  RELEASE_CHECKLIST.md  RULE_PACKS.md  SOURCES.md
docs/assets/: demo-order.md  render_demo.py  render_demo_gif.py
eval/: generate.py  labels.json  results.json  score.py  stress_results.json
eval/corpus/: bad_cui_banner.md  bad_cui_unclass_prefix.md  bad_fragord.md  bad_namp_missing.md  bad_namp_unparseable_date.md  bad_naval_order.md  bad_naval_subject_case.md  bad_opord_missing_cs.md  bad_pii_edipi_dob.md  bad_warnord_sparse.md  casual_mission_prose.md  cui_in_prose.md  good_cui_opord.md  good_cui_portions.md  good_fragord.md  good_namp_ooma.md  good_namp_record.md  good_naval_full.md  good_naval_letter.md  good_order_orientation.md  good_warnord.md  itar_marked_cui.md  legacy_marking_doc.md  maintenance_prose.md  order_alias_service_support.md  phone_numbers_doc.md  plain_memo.md  ssn_lookalike.md  ten_digit_not_edipi.md
examples/: bad_cui_order.md  cds-mildoc-example.sarif  good_training_opord.md  mildoc-example.sarif  namp_discrepancy.md  naval_letter_bad.md
packaging/pyinstaller/: entrypoint.py  mildoc-lint.spec
scripts/: build_binary.py  checksum_artifacts.py  package_release_artifacts.py
src/cds_mildoc/: __init__.py  _version.py  cli.py  engine.py  models.py  packs.py  parsers.py  references.py  reporters.py  templates.py
src/cds_mildoc/archivist/: __init__.py  db.py  hashing.py  receipts.py  runner.py
src/cds_mildoc/rule_packs/: cui.yaml  namp.yaml  naval.yaml  osmeac.yaml  pii.yaml
src/cds_mildoc/rules/: __init__.py  cui.py  namp.py  naval.py  osmeac.py  pii.py  util.py
tests/: test_archivist.py  test_cli_entrypoints.py  test_doc_integrity.py  test_eval_precision.py  test_linter.py  test_no_overclaim.py  test_packaging_scripts.py  test_public_boundary.py  test_rule_packs.py
