[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mildoc-lint"
version = "0.1.0"
description = "Local-first linter for CUI markings, PII indicators, USMC O-SMEAC orders, naval correspondence, and NAMP/CSEC readiness records."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "CDS" }]
keywords = ["cui", "dod", "usmc", "navy", "namp", "osmeac", "linter", "documents"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Text Processing"
]

dependencies = []

[project.optional-dependencies]
pdf = ["pypdf>=4.0.0"]
dev = ["pytest>=7.0", "ruff>=0.5.0"]

[project.scripts]
mildoc-lint = "cds_mildoc.cli:main"
cds-mildoc = "cds_mildoc.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
