[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mildoc-lint"
dynamic = ["version"]
description = "Local-first linter for CUI markings, PII indicators, USMC O-SMEAC orders, naval correspondence, and NAMP/CSEC readiness records."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Centennial Defense Systems" }]
keywords = ["cui", "dod", "usmc", "navy", "namp", "osmeac", "linter", "documents"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Text Processing"
]

dependencies = []

[project.urls]
Repository = "https://github.com/cjchanh/mildoc-lint"
Issues = "https://github.com/cjchanh/mildoc-lint/issues"

[project.optional-dependencies]
pdf = ["pypdf>=4.0.0"]
build = ["build>=1.0", "pyinstaller>=6.0", "pypdf>=4.0.0"]
dev = ["build>=1.0", "pytest>=7.0", "ruff>=0.5.0", "mypy>=1.8", "pyinstaller>=6.0", "pypdf>=4.0.0"]

[project.scripts]
mildoc-lint = "cds_mildoc.cli:main"
cds-mildoc = "cds_mildoc.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "cds_mildoc._version.__version__" }

[tool.setuptools.package-data]
cds_mildoc = ["rule_packs/*.yaml"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
files = ["src/cds_mildoc"]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
